# kasa

./: .flake8  .gitignore  404.html  HISTORY.md  LICENSE  Makefile  README.md  contribution.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  twi_word_embedding.ipynb
.devcontainer/: devcontainer.env  devcontainer.json
.github/workflows/: build_docs.yml  test.yml
Kasa/: ContextualEmbeddings.py  Preprocessing.py  StaticEmbeddings.py  __init__.py  preprocessing.py  static_embeddings.py  train_BERT.py  train_WordPiece_tokenizer.py  trainbert.py
api/: __init__.py  main.py
api-reference/khaya/khaya_interface/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  index.md  license.md
docs/api-reference/khaya/: khaya_client.md  khaya_interface.md
docs/contributing/: index.md
docs/stylesheets/: material.css  mkdocstrings.css
examples/: load_and_preprocess_parallel_dataset.py
examples/notebooks/: data_processing.ipynb  ghananlp-kasa-retrieval-v0-1.ipynb
examples/scripts/: load_and_preprocess_parallel_dataset.py  log.txt  train_embeddings.py
khaya/: __init__.py  abstract_api.py  asr_api.py  base_api.py  config.py  constants.py  exceptions.py  khaya_client.py  khaya_interface.py  large_text_translator.py  logger.py  preprocessor.py  text_chunker.py  translation_api.py  tts_api.py
khaya/services/: asr.py  base_api.py  translation.py  tts.py
license/: index.html
notebooks/: eng_twi_transformer.ipynb  train_embeddings.py  twi_word_embedding.ipynb
search/: search_index.json
src/Kasa/: CHANGELOG.txt
src/kasa/: Preprocessing.py  __init__.py  config.py  khaya_client.py  utils.py
src/kasa/services/: asr.py  base_api.py  translation.py  tts.py
src/khaya/: config.py  khaya_client.py  logger.py  utils.py
src/khaya/services/: asr.py  base_api.py  translation.py  tts.py
stylesheets/: extra.css
tests/: conftest.py
tests/kasa/: test_batch_translator.py  test_config.py  test_khaya_client.py
tests/khaya/: conftest.py  test_batch_translator.py  test_config.py  test_khaya_client.py  test_khaya_interface.py  test_preprocessor.py
